.k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moveit-next-k8s
  labels:
    app: moveit-next-k8s
    app.kubernetes.io/component: moveit-next-k8s
    app.kubernetes.io/instance: moveit-next-k8s
    app.kubernetes.io/name: moveit-next-k8s
    app.kubernetes.io/part-of: moveit-next-app-k8s
    app.openshift.io/runtime: nodejs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: moveit-next-k8s
  template:
    metadata:
      labels:
        app: moveit-next-k8s
    spec:
      containers:
      - name: moveit-next-k8s
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          periodSeconds: 5
          initialDelaySeconds: 2
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          periodSeconds: 2
          initialDelaySeconds: 2
        image: quay.io/cleitonm/moveit-next:latest
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
        ports:
        - containerPort: 3000
          protocol: TCP
